Fix text align for admin index page cells that contain links

--- a/web/static/css/admin/_index_page.scss
+++ b/web/static/css/admin/_index_page.scss
@@ -11,6 +11,9 @@
 			display: block;
 			padding: 8px;
 			height: 100%;
+		}
+
+		& > div{
 			text-align: center;
 		}
 	}
